# cache_sim

./: .gitignore  CMakeLists.txt  README.md  format.conf  format.trace  format.trace.out  sample.conf  sample.trace
report/: .gitignore  report.tex
src/: CMakeLists.txt  base_structs.hpp  cache.hpp  cache_block.hpp  cache_factory.cpp  cache_factory.hpp  cache_sim.cpp  cache_sim.hpp  cache_sim_test.cpp  fifo_cache.cpp  fifo_cache.hpp  main.cpp  rand_cache.cpp  rand_cache.hpp  util.cpp  util.hpp
traces/: test.trace
